style.css
.wrapper {
    max-width: 60em;
    margin: 0 auto;
}

.answers {
    margin-top: 1em;
}

input {
    width: 100%;
    max-width: 90%;
}

a {
    color: #d2d2d2;
}

.title > a {
    color: var(--text);
    text-decoration: none;
}

.flasher {
	display: block;
	position: absolute;
	z-index: 2;
	background: white;
	color: black;
	padding: 5px;
	top: 5em;
	left: 46%;
}

.hide {
    display: none;
}

.reveal {
    border: 1px solid var(--border);
    width: 100%;
    display: inline-flex;
    justify-content: center;
    align-items: center;
    vertical-align: middle;
    box-sizing: border-box;
    user-select: none;
    padding: 5px;
    margin-right: 1em;
    visibility: hidden;
}

.placeholder {
    border: 1px solid var(--border);
    padding: 5px;
    margin-bottom: 1em;
    max-width: 100%;
    background: var(--bg);
    color: var(--bg);
}

body {
    background: var(--bg);
    color: var(--text);
}

.wrong {
    background: var(--wrong);
}

.right {
    background: var(--right);
}

.row {
    margin-bottom: 1em;
}

.flip {
    transform-style: preserve-3d;
    animation-duration: 1500ms;
    animation-name: flip;
    animation-fill-mode: forwards;  
}

@keyframes flip {
    from {
        backface-visibility: hidden;
        transform: rotateX(180deg);
        visibility: hidden;
    }

    to {
        transform: rotateX(0deg);
        visibility: visible;
    }
}

.modal {
    display: none;
    overflow: scroll;
    position: fixed;
    z-index: 1;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0,0,0,0.4);
}

.modal-content {
    background: var(--modal);
    margin: 10% auto;
    padding: 20px;
    border: 1px solid var(--border);
    width: 40em;
    max-width: 75%;
}

.modal_close {
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.modal_close:hover,
.modal_close:focus {
    text-decoration: none;
    cursor: pointer;
} 

.modal_open {
    cursor: pointer;
}


.flex-container {
    display: flex;
}

.icon-wrapper {
    width: 10%;
    padding-top: 0.5em;
}

@media screen and (max-width: 700px) {
    img {
        width: 100%;
    }
}

@media screen and (min-width: 700px) {
    img {
        width: 49%;
    }
}

.menu-wrapper {
    padding-top: 0.6em;
}

#menu {
    margin-left: 1em;
}

#stats {
    margin-right: 1em;
}

.right-icon {
    text-align: right;
}

.title {
    width: 80%;
    text-align: center;
    margin: 0;
}

.center-text {
    text-align: center;
}

.statistic-container {
	flex: 1;
}

#statistics {
	display: flex;
	margin-bottom: ;
}

.statistic-container .statistic {
	font-size: 36px;
	font-weight: 400;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	letter-spacing: 0.05em;
	font-variant-numeric: proportional-nums;
}

.statistic-container .label {
	font-size: 12px;
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
}

#guess-distribution {
	width: 80%;
}

.graph-container {
	width: 100%;
	height: 20px;
	display: flex;
	align-items: center;
	padding-bottom: 4px;
	font-size: 14px;
	line-height: 20px;
}

.graph-container .graph {
	width: 100%;
	height: 100%;
	padding-left: 4px;
}
.graph-container .graph .graph-bar {
	height: 100%;
	width: 0%;
	position: relative;
	background-color: var(--border);
	display: flex;
	justify-content: center;
}

.graph-container .graph .num-guesses {
	font-weight: bold;
	color: white;
}

.selected {
    outline: 1px solid var(--right);
}

.highlight {
    background-color: var(--right) !important;
}

button#share-button {
    background-color: var(--right);
	color: var(--text);
	font-family: inherit;
	font-weight: bold;
	border-radius: 4px;
	cursor: pointer;
	border: none;
	user-select: none;
	display: flex;
	justify-content: center;
	align-items: center;
	text-transform: uppercase;
	-webkit-tap-highlight-color: rgba(0,0,0,0.3);
	width: 80%;
	font-size: 20px;
	height: 52px;
	-webkit-filter: brightness(100%);
}

.share {
	display: flex;
	justify-content: center;
	align-items: center;
	padding-left: 12px;
	width: 50%;
}

.footer {
	display: flex;
	width: 100%;
}

.countdown {
	border-right: 1px solid var(--text);
	padding-right: 12px;
	width: 50%;
}

.image-container {
    margin-top: 1em;
}

img {
    max-width: 100%;
}

.disabled {
    color: var(--gray);
    cursor: not-allowed;
}

:root {
  --gray: #9b9b9b;
  --right: #538d4e;
  --text: #fff;
  --wrong: #3a3a3c;
  --placeholder: var(--bg);
  --bg: #212121;
  --modal: #272729;
  --border: #888;
}

#movie_guess {
    height: 2em;
}

button {
    height: 2rem;
    width: 6em;
    text-transform: uppercase;
}

